Added a basic menu to the page

--- a/website/styles/main.styl
+++ b/website/styles/main.styl
@@ -59,3 +59,13 @@ h1
 	border: 0
 	display: block
 
+nav
+	margin-top: 0.5em
+	font-size: 1.3em
+	text-align: center
+
+	a
+		color: headerLinkColor
+		text-decoration: none
+		padding: 0.5em 1em
+		text-shadow 0 1px 1px rgba(0,0,0,0.5);
