--- a/website/index.jade
+++ b/website/index.jade
@@ -8,11 +8,11 @@ html
 		h1 A Turing Machine build using LEGO
 		img#head(src='images/global.jpg', width='640px', height='480px')
 		
-		nav: ul
-			li: a(href="#Video") Video
-			li: a(href="#LEGO") Lego
-			li: a(href="#Software") Software
-			li: a(href="Credits") Credits
+		nav
+			a(href="#Video") Video
+			a(href="#LEGO") Lego
+			a(href="#Software") Software
+			a(href="#Credits") Credits
 
 		a#Video
 		section
