Made the page a fixed with range

--- a/website/styles/main.styl
+++ b/website/styles/main.styl
@@ -36,11 +36,14 @@ html
 	font-size: 0.9em
 	background: darken(backgroundColor, 3%) 
 	margin: 0 auto
+	min-width: 725px
+	max-width: 900px
 	width: 80%
 
 body
 	background: #fff
-	margin-top: 10px
+	margin-top: 20px
+	margin-bottom: 20px
 	border: 1px solid borderColor
 	padding: 1em
 
@@ -69,3 +72,7 @@ nav
 		text-decoration: none
 		padding: 0.5em 1em
 		text-shadow 0 1px 1px rgba(0,0,0,0.5);
+
+section
+	width: 700px
+	margin: 0 auto
