Added more text to the index page

--- a/website/index.jade
+++ b/website/index.jade
@@ -10,16 +10,51 @@ html
 		
 		nav
 			a(href="#Video") Video
+			a(href="#Turing") Turing Machine?
 			a(href="#LEGO") Lego
 			a(href="#Software") Software
 			a(href="#Credits") Credits
 
-		a#Video
-		section
+		section#Video
 			h2 Video
 			object(width="720px", heigh="405px")
 			p
 				| Filmography thanks to Andre Theelen of ecalpemos.nl
 
+		section#Turing
+			h2 Turing Machine?
+			p
+				| A Turing machine is a device that manipulates symbols 
+				| on a tape according to a table of rules (its ``program'').
+				| It is able to simulate the logic of any computer program,
+				| and is particularly useful in explaining what 
+				| a computer can do.
+
+		section#LEGO
+			h2 LEGO
+			p
+				| A description of the LEGO challenges for our machine.
+				| And a teaser link to a possible ready-made kit.
+
+		section#Software
+			h2 Software
+			p
+				| Link to github and rascal svn. Also discuss rascal,
+				| turing language, and NXC.
+
+		section#Credits
+			h2 Credits
+			h3 Build by
+			ul
+				li Jeroen van den Bos (NFI/CWI)
+				li Davy Landman (CWI)
+
+			h3 Contributed to
+			ul
+				li Karin Blankers (CWI)
+				li Paul Klint (CWI)
+				li Atze van der Ploeg (CWI)
+				li Tijs van der Storm (CWI)
+				li Jurgen Vinju (CWI)
 
 
