Added logo's to the page

--- a/website/index.jade
+++ b/website/index.jade
@@ -44,9 +44,13 @@ html
 
 		section#Credits
 			h2 Credits
+			.image-credits
+				img(src="images/CWI.png", height="75px")
+				img(src="images/LEGO.png", height="75px")
+				img(src="images/RASCAL.png", height="75px")
 			h3 Build by
 			ul
-				li Jeroen van den Bos (NFI/CWI)
+				li Jeroen van den Bos (CWI/NFI)
 				li Davy Landman (CWI)
 
 			h3 Contributed to
