--- a/website/styles/main.styl
+++ b/website/styles/main.styl
@@ -76,3 +76,10 @@ nav
 section
 	width: 700px
 	margin: 0 auto
+
+.image-credits
+	text-align: center
+	display: block
+
+	img
+		padding: 0.2em 0.8em
