--- a/website/index.jade
+++ b/website/index.jade
@@ -17,36 +17,36 @@ html
 
 		section#Video
 			h2 Video
-			object(width="720px", heigh="405px")
+			<iframe src="http://player.vimeo.com/video/44202270" width="500" height="213" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			p
 				| Short documentary by Andre Theelen of ecalpemos.nl
 
 		section#Turing
 			h2 The Turing Machine
 			p
-			  | According to
-			  a(href=http://en.wikipedia.org/wiki/Turing_machine) Wikipedia
-			  | :
+				| According to
+				a(href="http://en.wikipedia.org/wiki/Turing_machine") Wikipedia
+				| :
 			p
-			  | "A Turing machine is a device that manipulates symbols on a strip
-			  | of tape according to a table of rules. Despite its simplicity, a
-			  | Turing machine can be adapted to simulate the logic of any computer
-			  | algorithm, and is particularly useful in explaining the functions
-			  | of a CPU inside a computer."
+				| "A Turing machine is a device that manipulates symbols on a strip
+				| of tape according to a table of rules. Despite its simplicity, a
+				| Turing machine can be adapted to simulate the logic of any computer
+				| algorithm, and is particularly useful in explaining the functions
+				| of a CPU inside a computer."
 			p
-			  | Unlike what the name suggests, it is not a physical machine but
-			  | rather a theoretical model. It's very simply, but describes the
-			  | fundamental capabilities of practically all computers in use today.
-			  | This means that if something can be done on a computer, it can also
-			  | be done on a Turing machine. This makes it a great model for
-			  | scientists to use to discover the limits of computers (e.g.
-			  | complexity theory) and also to show to a broad audience how a
-			  | computer fundamentally operates.
+				| Unlike what the name suggests, it is not a physical machine but
+				| rather a theoretical model. It's very simply, but describes the
+				| fundamental capabilities of practically all computers in use today.
+				| This means that if something can be done on a computer, it can also
+				| be done on a Turing machine. This makes it a great model for
+				| scientists to use to discover the limits of computers (e.g.
+				| complexity theory) and also to show to a broad audience how a
+				| computer fundamentally operates.
 			p
-			  | However, abstract models are just that, an abstraction of
-			  | something. In order to really show how simple the fundamental
-			  | model of a computer is, we have developed a physical
-			  | implementation of the Turing machine, using LEGO Mindstorms NXT.
+				| However, abstract models are just that, an abstraction of
+				| something. In order to really show how simple the fundamental
+				| model of a computer is, we have developed a physical
+				| implementation of the Turing machine, using LEGO Mindstorms NXT.
 
 		section#LEGO
 			h2 LEGO
@@ -66,21 +66,21 @@ html
 		section#Software
 			h2 Software
 			p
-			  | The software we have developed to execute programs in a basic
-			  | Turing machine language can be found on
-			  a(href=) github
-			  | Additionally, we have developed an interactive development
-			  | environment (IDE) using the
-			  (a href=http://www.rascal-mpl.org) Rascal Metaprogramming Language
-			  | which is stored in our public
-			  (a href=) subversion repository
+				| The software we have developed to execute programs in a basic
+				| Turing machine language can be found on
+				a(href="https://github.com/DavyLandman/TuringLEGO") github
+				| Additionally, we have developed an interactive development
+				| environment (IDE) using the
+				a(href="http://www.rascal-mpl.org") Rascal Metaprogramming Language
+				| which is stored in our public
+				a(href="http://svn.rascal-mpl.org/rascal/trunk/src/org/rascalmpl/library/demo/lang/turing/") subversion repository
 
 		section#Credits
 			h2 Credits
-			.image-credits
-				img(src="images/CWI.png", height="75px")
-				img(src="images/RASCAL.png", height="75px")
-				img(src="images/LEGO.png", height="75px")
+				.image-credits
+					img(src="images/CWI.png", height="75px")
+					img(src="images/RASCAL.png", height="75px")
+					img(src="images/LEGO.png", height="75px")
 			h3 Build by
 			ul
 				li Jeroen van den Bos (CWI/NFI)
