Added spacing around the html links

--- a/website/index.jade
+++ b/website/index.jade
@@ -25,6 +25,7 @@ html
 			h2 The Turing Machine
 			p
 				| According to
+				&nbsp;
 				a(href="http://en.wikipedia.org/wiki/Turing_machine") Wikipedia
 				| :
 			p
@@ -55,10 +56,14 @@ html
 				| interpretation of computer memory: switches. Additionally, it uses
 				| a light sensor to determine the value of a switch: if the switch is
 				| on, the sensor will
+				&nbsp;
 				i see
+				&nbsp;
 				| the black colour of the switch's surface. But if it is turned off,
 				| the sensor will
+				&nbsp;
 				i see
+				&nbsp;
 				| the white colour of the LEGO beam, making it possible to
 				| distinguish between the states. Finally, a rotating beam mounted
 				| above the tape can flip the switch in both directions.
@@ -68,11 +73,16 @@ html
 			p
 				| The software we have developed to execute programs in a basic
 				| Turing machine language can be found on
+				&nbsp;
 				a(href="https://github.com/DavyLandman/TuringLEGO") github
+				&nbsp;
 				| Additionally, we have developed an interactive development
 				| environment (IDE) using the
+				&nbsp;
 				a(href="http://www.rascal-mpl.org") Rascal Metaprogramming Language
+				&nbsp;
 				| which is stored in our public
+				&nbsp;
 				a(href="http://svn.rascal-mpl.org/rascal/trunk/src/org/rascalmpl/library/demo/lang/turing/") subversion repository
 
 		section#Credits
