Added links of the credit logo's

--- a/website/index.jade
+++ b/website/index.jade
@@ -19,7 +19,9 @@ html
 			h2 Video
 			<iframe src="http://player.vimeo.com/video/44202270" width="500" height="213" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			p
-				| Short documentary by Andre Theelen of ecalpemos.nl
+				| Short documentary by Andre Theelen of 
+				&nbsp;
+				a(href="http://www.ecalpemos.nl", target="_blank") ecalpemos.nl
 
 		section#Turing
 			h2 The Turing Machine
@@ -74,23 +76,23 @@ html
 				| The software we have developed to execute programs in a basic
 				| Turing machine language can be found on
 				&nbsp;
-				a(href="https://github.com/DavyLandman/TuringLEGO") github
+				a(href="https://github.com/DavyLandman/TuringLEGO", target="_blank") github
 				&nbsp;
 				| Additionally, we have developed an interactive development
 				| environment (IDE) using the
 				&nbsp;
-				a(href="http://www.rascal-mpl.org") Rascal Metaprogramming Language
+				a(href="http://www.rascal-mpl.org", target="_blank") Rascal Metaprogramming Language
 				&nbsp;
 				| which is stored in our public
 				&nbsp;
-				a(href="http://svn.rascal-mpl.org/rascal/trunk/src/org/rascalmpl/library/demo/lang/turing/") subversion repository
+				a(href="http://svn.rascal-mpl.org/rascal/trunk/src/org/rascalmpl/library/demo/lang/turing/", target="_blank") subversion repository
 
 		section#Credits
 			h2 Credits
 				.image-credits
-					img(src="images/CWI.png", height="75px")
-					img(src="images/RASCAL.png", height="75px")
-					img(src="images/LEGO.png", height="75px")
+					a(href="http://www.cwi.nl", target="_blank"): img(src="images/CWI.png", height="75px")
+					a(href="http://www.rascal-mpl.org", target="_blank"): img(src="images/RASCAL.png", height="75px")
+					a(href="http://www.lego.nl", target="_blank"): img(src="images/LEGO.png", height="75px")
 			h3 Build by
 			ul
 				li Jeroen van den Bos (CWI/NFI)
