Fixed position of the video

--- a/website/index.jade
+++ b/website/index.jade
@@ -17,7 +17,8 @@ html
 
 		section#Video
 			h2 Video
-			<iframe src="http://player.vimeo.com/video/44202270" width="500" height="213" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+			.vimeo
+				<iframe src="http://player.vimeo.com/video/44202270" width="500" height="213" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 			p
 				| Short documentary by Andre Theelen of 
 				&nbsp;
