--- a/website/styles/main.styl
+++ b/website/styles/main.styl
@@ -85,6 +85,11 @@ section
 		padding: 0.2em 0.8em
 
 	a
-		img
+		img,
+		img:hover
 			cursor: pointer
 			cursor: hand
+
+#Video
+	.vimeo	
+		text-align: center
