--- a/website/index.jade
+++ b/website/index.jade
@@ -94,7 +94,7 @@ html
 					a(href="http://www.cwi.nl", target="_blank"): img(src="images/CWI.png", height="75px")
 					a(href="http://www.rascal-mpl.org", target="_blank"): img(src="images/RASCAL.png", height="75px")
 					a(href="http://www.lego.nl", target="_blank"): img(src="images/LEGO.png", height="75px")
-			h3 Build by
+			h3 Built by
 			ul
 				li Jeroen van den Bos (CWI/NFI)
 				li Davy Landman (CWI)
