--- a/website/styles/main.styl
+++ b/website/styles/main.styl
@@ -57,11 +57,6 @@ h1
 	text-align: center
 	text-shadow 1px 1px 2px rgba(0, 0, 0, 0.4)
 
-#head
-	margin: 0 auto
-	border: 0
-	display: block
-
 nav
 	margin-top: 0.5em
 	font-size: 1.3em
@@ -93,3 +88,13 @@ section
 #Video
 	.vimeo	
 		text-align: center
+
+#Introduction
+	margin-bottom: 3em
+	h2
+		text-align: center
+		font-size: 1.3em
+		margin-top: -0.8em
+	p
+		color: headerLinkColor
+		font-size: 0.9em
