Link to Turing's Erfenis exhibition press release on CWI website.

--- a/website/index.jade
+++ b/website/index.jade
@@ -23,6 +23,9 @@ html
 				| a computer actually is.
 				| Primary goals were to make every operation as visible as possible and to make it using just
 				| a single LEGO MINDSTORMS NXT set.
+				| The LEGO Turing Machine is part of the exhibition
+				a (href="http://www.cwi.nl/news/2012/exhibition-turings-erfenis-at-centrum-wiskunde-informatica-opens-it-doors") Turing's Erfenis
+				| at CWI.
 		
 		nav
 			a(href="#Video") Short documentary
