--- a/website/index.jade
+++ b/website/index.jade
@@ -24,7 +24,9 @@ html
 				| Primary goals were to make every operation as visible as possible and to make it using just
 				| a single LEGO MINDSTORMS NXT set.
 				| The LEGO Turing Machine is part of the exhibition
-				a (href="http://www.cwi.nl/news/2012/exhibition-turings-erfenis-at-centrum-wiskunde-informatica-opens-it-doors") Turing's Erfenis
+				&nbsp;
+				a(href="http://www.cwi.nl/news/2012/exhibition-turings-erfenis-at-centrum-wiskunde-informatica-opens-it-doors") Turing's Erfenis
+				&nbsp;
 				| at CWI.
 		
 		nav
