Added Vadim to Contributors

--- a/website/index.jade
+++ b/website/index.jade
@@ -150,6 +150,7 @@ html
 				li Atze van der Ploeg (CWI)
 				li: a(href="http://homepages.cwi.nl/~storm/", target="_blank") Tijs van der Storm (CWI)
 				li: a(href="http://homepages.cwi.nl/~jurgenv/", target="_blank") Jurgen Vinju (CWI)
+				li: a(href="http://grammarware.net", target="_blank") Vadim Zaytsev (CWI)
 				li: a(href="http://www.cwi.nl/research-groups/Software-Analysis-and-Transformation", target="_blank") Software Analysis and Transformation Team
 
 
