Added social sharing buttons to our site

--- a/website/index.jade
+++ b/website/index.jade
@@ -17,7 +17,7 @@ html
 		h1 A Turing Machine built using LEGO
 		section#Introduction
 			h2 In honor of the Alan Turing year 2012
-			img#head(src='images/global.jpg', width='640px', height='480px')
+			img#head(src='images/global.jpg', width='525px', height='394px')
 			p
 				| To honor Alan Turing, we built a simple LEGO Turing Machine, to show everyone how simple
 				| a computer actually is.
@@ -28,6 +28,12 @@ html
 				a(href="http://www.cwi.nl/news/2012/exhibition-turings-erfenis-at-centrum-wiskunde-informatica-opens-it-doors", target="_blank") Turing's Erfenis
 				&nbsp;
 				| at CWI.
+			.addthis_toolbox.addthis_default_style
+				<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+				<a class="addthis_button_tweet"></a>
+				<a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
+				<a class="addthis_counter addthis_pill_style"></a>
+			script(type="text/javascript", src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4fe2d59a04c25a0d")
 		
 		a#leftLogo(href="http://www.rascal-mpl.org", target="_blank"): img(src="images/RASCAL.png", height="75px")
 		a#rightLogo(href="http://www.cwi.nl", target="_blank"): img(src="images/CWI.png", height="50px")
