--- a/website/styles/main.styl
+++ b/website/styles/main.styl
@@ -58,6 +58,14 @@ h1
 	text-align: center
 	text-shadow 1px 1px 2px rgba(0, 0, 0, 0.4)
 
+#head
+	display: block
+	margin: 0 auto
+
+.addthis_toolbox
+	width: 65%
+	margin: 0 auto
+
 nav
 	margin-top: 0.5em
 	font-size: 1.3em
