--- a/website/styles/main.styl
+++ b/website/styles/main.styl
@@ -40,7 +40,7 @@ html
 	max-width: 900px
 	width: 80%
 
-body
+#mainContainer
 	background: #fff
 	margin-top: 20px
 	margin-bottom: 20px
@@ -130,3 +130,13 @@ pre
 #rightLogo
 	right: 1.1em
 	top: 2.5em
+
+#Gallery
+	p
+		text-align: center
+		img
+			border: 1px solid borderColor
+			margin: 0.5em
+	.info
+		margin-top: -2em
+		font-size: 0.7em
