Added jeroen link

--- a/website/index.jade
+++ b/website/index.jade
@@ -164,7 +164,7 @@ html
 						a(href="http://www.lego.nl", target="_blank"): img(src="images/LEGO.png", height="75px")
 				h3 Built by
 				ul
-					li Jeroen van den Bos (CWI/NFI)
+					li: a(href="http://twitter.com/jvandenbos", target="_blank") Jeroen van den Bos (CWI/NFI)
 					li: a(href="http://homepages.cwi.nl/~landman/", target="_blank") Davy Landman (CWI)
 
 				h3 Additional contributions by
